--- a/WebContent/static/css/blog.css
+++ b/WebContent/static/css/blog.css
@@ -1,46 +1,43 @@
-body {
-	background-color:#ededef;
-}
 .home {
-	background-image: url(../images/index-bk.jpg);
-	background-repeat: no-repeat;
+    background-image: url(../images/index-bk.jpg);
+    background-repeat: no-repeat;
 }
 
 .ghost-button {
-	display: inline-block;
-	width: 200px;
-	padding: 8px;
-	color: #fff;
-	border: 1px solid #fff;
-	text-align: center;
-	outline: none;
-	text-decoration: none;
+    display: inline-block;
+    width: 200px;
+    padding: 8px;
+    color: #fff;
+    border: 1px solid #fff;
+    text-align: center;
+    outline: none;
+    text-decoration: none;
 }
 .ghost-button:hover, .ghost-button:active {
-	background-color: #fff;
-	color: #000;
-	text-decoration: none;
+    background-color: #fff;
+    color: #000;
+    text-decoration: none;
 }
 .ghost-button-transition {
-	display: inline-block;
-	width: 200px;
-	padding: 8px;
-	color: #fff;
-	border: 2px solid #fff;
-	text-align: center;
-	outline: none;
-	text-decoration: none;
-	transition: background-color 0.2s ease-out,
-	color 0.2s ease-out;
+    display: inline-block;
+    width: 200px;
+    padding: 8px;
+    color: #fff;
+    border: 2px solid #fff;
+    text-align: center;
+    outline: none;
+    text-decoration: none;
+    transition: background-color 0.2s ease-out,
+    color 0.2s ease-out;
 }
 .ghost-button-transition:hover,
 .ghost-button-transition:focus,
 .ghost-button-transition:active {
-	background-color: #fff;
-	color: #000;
-	text-decoration: none;
-	transition: background-color 0.3s ease-in,
-	color 0.3s ease-in;
+    background-color: #fff;
+    color: #000;
+    text-decoration: none;
+    transition: background-color 0.3s ease-in,
+    color 0.3s ease-in;
 }
 .footer {
     color: #506368;
@@ -59,19 +56,18 @@ body {
     margin-bottom: 30px;
 }
 a {
-	text-decoration: none;
+    text-decoration: none;
 }
 a:hover,
 a:focus,
 a:active {
-	text-decoration: none;
+    text-decoration: none;
 }
 .welcome {
-	color: #fff;
+    color: #fff;
 }
 .header {
-	padding:25px;
-	margin-bottom: 30px;
+    padding:25px;
 }
 .headItem {
     color: #fff;
@@ -84,20 +80,50 @@ a:active {
 .headItem:hover,
 .headItem:focus,
 .headItem:active {
-	color: #fff;
-	text-decoration: none;
-	border: 1px solid #fff;
+    color: #fff;
+    text-decoration: none;
+    border: 1px solid #fff;
 }
-.articles {
-	background-color:#ededef;
+.contents {
+    background-image: url(../images/main-bk.png);
+    background-repeat: repeat;
 }
 .article {
-	background-color: #fff;
-	padding:15px 220px;
+    background-color: #fff;
+    padding:15px 220px;
 }
-.articleTicle {
-	text-align: center;
+.articleTitle {
+    text-align: center;
 }
 .newArticle {
-	background-color: #fff;
+    background-color: #fff;
+}
+.borderImage {
+    position: relative;
+    top: 2px;
+    z-index: 5;
+    height: 12px;
+    background-image: url(../images/border.png);
+    background-repeat: repeat-x;
+    box-shadow: 0px 4px 5px #888888;
+}
+.foot {
+    min-height:60px;
+    text-align:center;
+    padding-top:20px;
+}
+.tabs {
+    color: #8e7874;
+    transition: color .2s;    
+    padding:0 20px;
+    font-size:18px;
+    font-weight:200;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+.tabs:hover,
+.tabs:focus,
+.tabs:active {
+    color: #8e7874;
+    text-decoration: none;
+    border: 1px solid #8e7874;
 }
