--- a/WebContent/static/css/blog.css
+++ b/WebContent/static/css/blog.css
@@ -134,6 +134,14 @@ a:active {
     background-repeat: repeat-x;
     box-shadow: 0px 4px 5px #888888;
 }
+.borderLine {
+    position: relative;
+    top: 2px;
+    z-index: 5;
+    height: 12px;
+    background-image: url(../images/border-line.png);
+    background-repeat: repeat-x;
+}
 .foot {
     min-height:80px;
     text-align:center;
