--- a/WebContent/static/jquery-validation-1.14.0/demo/site-demos.css
+++ b/WebContent/static/jquery-validation-1.14.0/demo/site-demos.css
@@ -7,6 +7,7 @@ label.error {
 	background: url('images/unchecked.gif') no-repeat;
 	padding-left: 16px;
 	margin-left: .3em;
+	margin-top: .3em;
 }
 label.valid {
 	background: url('images/checked.gif') no-repeat;
